fixed html css prop that prevented scroll on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html {
-  height: fit-content;
+  /* height: fit-content; */
   scroll-behavior: smooth;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
